[gd_scene load_steps=16 format=1]

[ext_resource path="res://systems/ui/pause.gd" type="Script" id=1]
[ext_resource path="res://res/ui/panel_title.png" type="Texture" id=2]
[ext_resource path="res://res/fonts/dimbo_itallic.fnt" type="Font" id=3]
[ext_resource path="res://res/ui/new-ui/graphics_button.png" type="Texture" id=4]
[ext_resource path="res://res/ui/new-ui/graphics_button_pressed.png" type="Texture" id=5]
[ext_resource path="res://systems/ui/Theme.thm" type="Theme" id=6]
[ext_resource path="res://res/ui/new-ui/graphics_SFX_Enabled.png" type="Texture" id=7]
[ext_resource path="res://res/ui/new-ui/graphics_SFX_Disabled.png" type="Texture" id=8]
[ext_resource path="res://res/ui/new-ui/graphics_Disabled.png" type="Texture" id=9]
[ext_resource path="res://res/ui/new-ui/graphics_music_enabled.png" type="Texture" id=10]
[ext_resource path="res://res/ui/new-ui/graphics_music_disabled.png" type="Texture" id=11]
[ext_resource path="res://res/fonts/dimbo.fnt" type="Font" id=12]
[ext_resource path="res://res/ui/close_normal.png" type="Texture" id=13]
[ext_resource path="res://res/ui/close_pressed.png" type="Texture" id=14]
[ext_resource path="res://res/ui/close_over.png" type="Texture" id=15]

[node name="menu" type="CanvasLayer"]

process/pause_mode = 2
layer = 4
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }
title_string = "Paused"

[node name="Panel" type="Panel" parent="."]

visibility/self_opacity = 0.6
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2

[node name="menu" type="Patch9Frame" parent="Panel"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
margin/left = 110.0
margin/top = 200.0
margin/right = -110.0
margin/bottom = -200.0
rect/min_size = Vector2( 240, 320 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
texture = ExtResource( 2 )
patch_margin/left = 32
patch_margin/top = 50
patch_margin/right = 32
patch_margin/bottom = 32

[node name="title" type="Label" parent="Panel/menu"]

margin/left = 40.0
margin/top = -6.0
margin/right = 200.0
margin/bottom = 43.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 3 )
text = "Menu"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="options" type="VBoxContainer" parent="Panel/menu"]

anchor/right = 1
anchor/bottom = 1
margin/left = 20.0
margin/top = 40.0
margin/right = 20.0
margin/bottom = 20.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0

[node name="resume" type="TextureButton" parent="Panel/menu/options"]

margin/right = 200.0
margin/bottom = 68.0
hint/tooltip = "Try again!!"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )

[node name="Label" type="Label" parent="Panel/menu/options/resume"]

margin/left = 18.0
margin/top = 10.0
margin/right = 178.0
margin/bottom = 59.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
theme/theme = ExtResource( 6 )
text = "Resume"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sfx" type="TextureButton" parent="Panel/menu/options"]

margin/top = 72.0
margin/right = 200.0
margin/bottom = 137.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 7 )
textures/disabled = ExtResource( 8 )

[node name="disabled" type="Sprite" parent="Panel/menu/options/sfx"]

transform/pos = Vector2( 32.962, 31.3409 )
texture = ExtResource( 9 )

[node name="sfx_volume" type="HSlider" parent="Panel/menu/options/sfx"]

margin/left = 70.0
margin/top = 20.0
margin/right = 190.0
margin/bottom = 36.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
range/min = 0.0
range/max = 1.0
range/step = 0.1
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true

[node name="music" type="TextureButton" parent="Panel/menu/options"]

margin/top = 141.0
margin/right = 200.0
margin/bottom = 205.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 10 )
textures/disabled = ExtResource( 11 )

[node name="disabled" type="Sprite" parent="Panel/menu/options/music"]

transform/pos = Vector2( 31.962, 31.3409 )
texture = ExtResource( 9 )

[node name="bgm_volume" type="HSlider" parent="Panel/menu/options/music"]

margin/left = 69.0
margin/top = 31.0
margin/right = 189.0
margin/bottom = 47.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
range/min = 0.0
range/max = 1.0
range/step = 0.1
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true

[node name="quit" type="TextureButton" parent="Panel/menu/options"]

margin/top = 209.0
margin/right = 200.0
margin/bottom = 277.0
hint/tooltip = "Try again!!"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="Panel/menu/options/quit"]

margin/left = 18.0
margin/top = 10.0
margin/right = 178.0
margin/bottom = 59.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 12 )
text = "Quit"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="resume1" type="TextureButton" parent="Panel/menu"]

margin/left = 215.0
margin/top = 5.0
margin/right = 229.0
margin/bottom = 20.0
hint/tooltip = "Try again!!"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 13 )
textures/pressed = ExtResource( 14 )
textures/hover = ExtResource( 15 )


